Added unit-tests.